# 5550-RAG-App

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.py
knowledge_base/chroma_db/: chroma.sqlite3
output/: results.txt
output/chroma_db/: chroma.sqlite3
src/: __init__.py  config.py  embedder.py  evaluation.py  ingest.py  main.py  rag_query.py
src/security/: __init__.py  errors.py  execution_limits.py  input_guardrails.py  output_guardrails.py
tests/: test_execution_limits.py  test_injection_defense.py  test_input_guardrails.py  test_output_guardrails.py  test_refusal_accuracy.py  test_security_package.py
